# meggie_fooof

./: .gitignore  CHANGES.rst  MANIFEST.in  Makefile  README.md  meta.yaml  pyproject.toml  release.sh  requirements.txt  setup.py
.github/workflows/: check.yml
designer_ui_files/: createReportDialogUi.ui
meggie_fooof/: configuration.json
meggie_fooof/actions/fooof_create/: __init__.py
meggie_fooof/actions/fooof_create/controller/: fooof.py
meggie_fooof/actions/fooof_create/dialogs/: createReportDialogMain.py
meggie_fooof/actions/fooof_delete/: __init__.py  configuration.json
meggie_fooof/actions/fooof_delete_from_all/: __init__.py  configuration.json
meggie_fooof/actions/fooof_info/: __init__.py
meggie_fooof/actions/fooof_plot/: __init__.py  configuration.json
meggie_fooof/actions/fooof_plot/controller/: fooof.py
meggie_fooof/actions/fooof_save/: __init__.py  configuration.json
meggie_fooof/actions/fooof_save/controller/: fooof.py
meggie_fooof/datatypes/fooof_report/: fooof_report.py
meggie_fooof/tabs/fooof/: configuration.json  ui.py
meggie_fooof/tabs/fooof/controller/: fooof.py
meggie_fooof/tabs/fooof/dialogs/: createReportDialogMain.py  createReportDialogUi.py
meggie_fooof/utilities/: testing.py
