[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meggie_fooof"
version = "0.4.1"
description = "FOOOF plugin for Meggie"
license = { text = "BSD" }
dependencies = [
    "meggie>=1.9.0",
    "fooof~=1.0",
]

[project.urls]
homepage = "https://github.com/cibr-jyu/meggie_fooof"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-qt",
    "build",
    "twine",
    "setuptools",
]
test = [
    "black",
    "ruff",
    "pytest",
    "pytest-qt",
    "setuptools",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",
    "E203",
]

[tool.ruff.lint.mccabe]
max-complexity = 999

[tool.ruff.lint.per-file-ignores]
"*Ui.py" = ["F401"]
